# hezel

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  build_debug.sh
src/: CMakeLists.txt  hezel.h  test.cpp  test.h
src/glad/: CMakeLists.txt  glad.c
src/glad/include/glad/: glad.h
src/hezel/: CMakeLists.txt  application.cpp  application.h  core.h  entrypoint.h  hzpch.h  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  window.h
src/hezel/event/: CMakeLists.txt  application_event.h  event.h  key_event.h  mouse_event.h
src/hezel/imgui/: imgui_layer.cpp  imgui_layer.h
src/platform/linux/: linuxinput.cpp  linuxinput.h  linuxwindow.cpp  linuxwindow.h
tests/: CMakeLists.txt  sandbox_app.cpp
